WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263147
[WebGPU] maxBindGroupsPlusVertexBuffers limit is incorrect
https://bugs.webkit.org/show_bug.cgi?id=263147
Summary
[WebGPU] maxBindGroupsPlusVertexBuffers limit is incorrect
Mike Wyrzykowski
Reported
2023-10-13 16:15:11 PDT
[WebGPU] maxBindGroupsPlusVertexBuffers limit is incorrect
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-13 16:15:26 PDT
<
rdar://problem/116940919
>
Mike Wyrzykowski
Comment 2
2023-10-13 16:58:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19075
EWS
Comment 3
2023-10-15 17:19:57 PDT
Committed
269349@main
(8cbfc4626ba2): <
https://commits.webkit.org/269349@main
> Reviewed commits have been landed. Closing PR #19075 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug