[WebGPU] maxBindGroupsPlusVertexBuffers limit is incorrect https://bugs.webkit.org/show_bug.cgi?id=263147 <radar://116940919>

Reviewed by Dan Glastonbury.

The limit for maxBindGroupsPlusVertexBuffers was incorrect.

The max buffer index according to https://developer.apple.com/metal/Metal-Feature-Set-Tables.pdf
is 31 but we need one buffer for our own data, so set the limit
to 30 universally.

* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::maxBuffersPlusVertexBuffersForVertexStage const):
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::apple3):
(WebGPU::apple4):
(WebGPU::apple5):
(WebGPU::apple6):
(WebGPU::apple7):
(WebGPU::mac2):

Canonical link: https://commits.webkit.org/269349@main